--- a/README
+++ b/README
@@ -1,11 +1,9 @@
 Under heavy construction and neither stable nor useful at the moment. 
-
 This will eventually be a script to install/configure several packages to create a home automation, information and security system.  
 
 Base system at the moment is #! (http://crunchbanglinux.org/ ) with everything installed except for the printer support during the post-install setup. 
-
+#################################################################################################################################################
 Plans : 
-
   - Voice activated commands, responses echo'd to terminal and piped to text-to-speech
     - date/time/weather/etc
   - Motion detection using a webcam.  While away from home, wintermute is activated with a voice command, then when motion is detected, she'll begin taking snapshots of the intruder and upload them to either dropbox or an FTP server.
@@ -16,3 +14,26 @@ Plans :
   - Home automation (Low Priority) 
     - Control lights, thermostat, radio/TV channels, etc.
   - Infinitely expandible.  The selector script can have voice commands added for user-defined functions.
+#################################################################################################################################################
+Installation:  
+cd ~ && git clone http://github.com/Sindern/wintermute && cd wintermute && bash getwintermute.sh
+#################################################################################################################################################
+Startup: 
+To run wintermute, just use the 'voximp' command.  To pull the latest info from the svn, then run, use the 'runwintermute.sh' file.
+
+#################################################################################################################################################
+Say "WINTERMUTE" to get her to start listening to you, otherwise she'll ignore speech commands. 
+Current commands: 
+ DATE - Says the date
+ TIME - Says the time
+ WEATHER - Prints off weather in Austin TX (edit weather.sh to get a different city)
+ SHUTUP - Stops all voice output immediately in case a script glitches out and outputs a crazy-long string
+
+Stuff to add (ongoing list to be updated): 
+  CAPTAINS LOG : Begin recording until you say.  "END OF CAPTAINS LOG"  output to ~/documents/caplog
+#################################################################################################################################################
+To Do: 
+  Load specific items from a config file. (e.g: Weather location.)
+  Motion Detection / Recording of Video/Sound
+  SMS Alerts and triggers
+#################################################################################################################################################
