--- a/README
+++ b/README
@@ -16,11 +16,12 @@ Plans :
   - Infinitely expandible.  The selector script can have voice commands added for user-defined functions.
 #################################################################################################################################################
 Installation:  
-cd ~ && git clone http://github.com/Sindern/wintermute && cd wintermute && bash getwintermute.sh
+cd ~ && git clone http://github.com/Sindern/wintermute && cd wintermute && bash getwintermute.sh && bash runwintermute.sh
 #################################################################################################################################################
 Startup: 
 To run wintermute, just use the 'voximp' command.  To pull the latest info from the svn, then run, use the 'runwintermute.sh' file.
-
+Useful alias to add to ~/.bashrc: 
+alias wintermute='bash $HOME/wintermute/runwintermute.sh'
 #################################################################################################################################################
 Say "WINTERMUTE" to get her to start listening to you, otherwise she'll ignore speech commands. 
 Current commands: 
