--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Plans :
   - Infinitely expandible.  The selector script can have voice commands added for user-defined functions.
 #################################################################################################################################################
 Installation:  
-cd ~ && git clone http://github.com/Sindern/wintermute && cd wintermute && bash getwintermute.sh && bash runwintermute.sh
+cd ~ && git clone http://github.com/Sindern/wintermute && cd wintermute && bash install/getwintermute.sh && bash runwintermute.sh
 #################################################################################################################################################
 Startup: 
 To run wintermute, just use the 'voximp' command.  To pull the latest info from the svn, then run, use the 'runwintermute.sh' file.
